--- a/monitoring/templates/monitoring/statistics.html
+++ b/monitoring/templates/monitoring/statistics.html
@@ -1,7 +1,7 @@
 {% load static %}
-{% include 'components/header.html' %}
 
 <!DOCTYPE html>
+<link rel="stylesheet" type="text/css" href="{% static 'monitoring/styles.css' %}">
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -19,8 +19,6 @@
     </div>
     <a href="/" class="btn btn-primary mt-3">Назад</a>
 </div>
-
-{% include 'components/footer.html' %}
 
 </body>
 </html>
