--- a/monitoring/templates/monitoring/student_detail.html
+++ b/monitoring/templates/monitoring/student_detail.html
@@ -1,4 +1,6 @@
+{% load static %}
 <!DOCTYPE html>
+<link rel="stylesheet" type="text/css" href="{% static 'monitoring/styles.css' %}">
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
