--- a/monitoring/templates/monitoring/health_form.html
+++ b/monitoring/templates/monitoring/health_form.html
@@ -1,6 +1,7 @@
 {% load static %}
 
 <!DOCTYPE html>
+<link rel="stylesheet" type="text/css" href="{% static 'monitoring/styles.css' %}">
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -38,8 +39,5 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-{% include 'components/footer.html' %}
-
 </body>
 </html>
