--- a/monitoring/templates/monitoring/home.html
+++ b/monitoring/templates/monitoring/home.html
@@ -1,6 +1,6 @@
 {% load static %}
-{% include 'components/header.html' %}
 
+<link rel="stylesheet" type="text/css" href="{% static 'monitoring/styles.css' %}">
 <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
 <div class="container mt-5">
@@ -20,5 +20,3 @@
         </div>
     </div>
 </div>
-
-{% include 'components/footer.html' %}
