--- a/monitoring/templates/monitoring/student_list.html
+++ b/monitoring/templates/monitoring/student_list.html
@@ -1,5 +1,6 @@
 {% load static %}
-{% include 'components/header.html' %}
+
+<link rel="stylesheet" type="text/css" href="{% static 'monitoring/styles.css' %}">
 <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
 <div class="container mt-4 content">
@@ -29,4 +30,4 @@
     </div>
 </div>
 
-{% include 'components/footer.html' %}
+
